Improved error display_ Fixed a bug where sliders would be enforced for non_assigned examples
SQUASHED: AUTO-COMMIT-src-components-babylonian-programming-editor-babylonian-programming-editor.css,AUTO-COMMIT-src-components-babylonian-programming-editor-babylonian-programming-editor.js,AUTO-COMMIT-src-components-babylonian-programming-editor-demos-1_script.js,AUTO-COMMIT-src-components-babylonian-programming-editor-lively-code-editor-inject-styles.css,AUTO-COMMIT-src-components-babylonian-programming-editor-ui-slider-widget.js,

--- a/src/components/babylonian-programming-editor/babylonian-programming-editor.css
+++ b/src/components/babylonian-programming-editor/babylonian-programming-editor.css
@@ -15,6 +15,6 @@
 
 #status.error {
   background-color: hsla(344, 54%, 63%, 0.2);
-  border-color: rgb(151, 45, 46);
+  border-color: hsla(344, 54%, 63%, 0.6);
   color: rgb(151, 45, 46);
 }
