--- a/src/components/babylonian-programming-editor/lively-code-editor-inject-styles.css
+++ b/src/components/babylonian-programming-editor/lively-code-editor-inject-styles.css
@@ -1,4 +1,5 @@
 :host {
   flex: 1;
   height: auto;
+  overflow: auto;
 }
